refactor: centralize company access control in SensorService using CompanyResolver